<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingHorizontal="@dimen/sp_24px"
    android:paddingVertical="@dimen/sp_72px"
    android:id="@+id/dashboard_layout"
    tools:context=".DashboardActivity">

    <br.ufc.crateus.tcc.components.MyMaterialTextView
        android:id="@+id/MetricTitle"
        style="@style/Headline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_page_title"
        android:textColor="@color/neutral_01"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stepCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp_40px"
        android:layout_marginRight="@dimen/sp_16px"
        android:background="@drawable/card_background"
        android:clipToPadding="false"
        android:elevation="4dp"
        android:padding="@dimen/sp_16px"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/kcalCard"
        app:layout_constraintTop_toBottomOf="@+id/MetricTitle">

        <br.ufc.crateus.tcc.components.MyMaterialTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:fontFamily="@font/poppins_semibold"
            android:lineHeight="24sp"
            android:text="Passos"
            android:textColor="@color/neutral_01"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <br.ufc.crateus.tcc.components.MyImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_background"
            android:contentDescription="@string/dashboard_edit_step_goal_content_description"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <br.ufc.crateus.tcc.ui.GraphView
            android:id="@+id/graphView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="16dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <br.ufc.crateus.tcc.components.MyMaterialTextView
                android:id="@+id/metricValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="350"
                android:textColor="@color/neutral_01" />

            <br.ufc.crateus.tcc.components.MyMaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:text="Passos"
                android:textColor="@color/neutral_03" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/kcalCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp_40px"
        android:layout_marginRight="@dimen/sp_16px"
        android:background="@drawable/card_background"
        android:clipToPadding="false"
        android:elevation="4dp"
        android:padding="@dimen/sp_16px"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/stepCard"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MetricTitle">

        <br.ufc.crateus.tcc.components.MyMaterialTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:fontFamily="@font/poppins_semibold"
            android:lineHeight="24sp"
            android:text="Calorias"
            android:textColor="@color/neutral_01"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <br.ufc.crateus.tcc.components.MyImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_background"
            android:contentDescription="@string/dashboard_edit_kcal_goal_content_description"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <br.ufc.crateus.tcc.ui.GraphView
            android:id="@+id/graphView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="16dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <br.ufc.crateus.tcc.components.MyMaterialTextView
                android:id="@+id/metricValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="350"
                android:textColor="@color/neutral_01" />

            <br.ufc.crateus.tcc.components.MyMaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:text="Kcal"
                android:textColor="@color/neutral_03" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/workoutCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp_16px"
        android:layout_marginRight="@dimen/sp_16px"
        android:background="@drawable/card_background"
        android:clipToPadding="false"
        android:elevation="4dp"
        android:padding="@dimen/sp_16px"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/kcalCard"
        app:layout_constraintTop_toBottomOf="@+id/stepCard">

        <br.ufc.crateus.tcc.components.MyMaterialTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:fontFamily="@font/poppins_semibold"
            android:lineHeight="24sp"
            android:text="Exercício"
            android:textColor="@color/neutral_01"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <br.ufc.crateus.tcc.components.MyImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_background"
            android:contentDescription="@string/dashboard_edit_workout_goal_content_description"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <br.ufc.crateus.tcc.ui.GraphView
            android:id="@+id/graphView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="16dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <br.ufc.crateus.tcc.components.MyMaterialTextView
                android:id="@+id/metricValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="350"
                android:textColor="@color/neutral_01" />

            <br.ufc.crateus.tcc.components.MyMaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:text="Horas"
                android:textColor="@color/neutral_03" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/actionsCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp_16px"
        android:layout_marginRight="@dimen/sp_16px"
        android:clipToPadding="false"
        android:elevation="4dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/sp_16px"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/stepCard"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kcalCard">

        <br.ufc.crateus.tcc.components.MyButton
            android:id="@+id/addStepButton"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dashboard_add_step_content_description"
            android:text="Passos"
            android:textSize="12dp"
            app:icon="@drawable/ic_baseline_add_24" />

        <br.ufc.crateus.tcc.components.MyButton
            android:id="@+id/addKcalButton"
            style="@style/SecondaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:contentDescription="@string/dashboard_add_kcal_content_description"
            android:text="Calorias"
            android:textSize="12dp"
            app:icon="@drawable/ic_baseline_add_24" />

        <br.ufc.crateus.tcc.components.MyButton
            android:id="@+id/addWorkoutButton"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dashboard_add_workout_content_description"
            android:text="Execícios"
            android:textSize="12dp"
            app:icon="@drawable/ic_baseline_add_24" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
